# photivo

./: .hgignore  CMakeGenerate.py  CMakeLists.txt  CMakeLists.txt.in  COPYING  COPYING.3rd.party  Info.plist  ProjectHome.md  README  SConstruct  Screenshots.txt  mm extern photivo.py  photivo-appicon.icns  photivo-favicon.xcf  photivo.pro  photivo.qrc
BuildConfs/: DefaultBuild.py
ChannelMixers/: BlueChannel_BW.ptm  Generic_BW.ptm  GreenChannel_BW.ptm  HighContrast_BW.ptm  IR_ChannelSwitch.ptm  Luminance.ptm  NormalContrast_BW.ptm  RedChannel_BW.ptm
Curves/: Astia.ptc  DeltaGamma(0.45,0.1).ptc  DeltaGammaBT709.ptc  DeltaGamma_0.33_0.06.ptc  EV3V42.ptc  GammaTool.ptc  Optima.ptc  PointAndShootV41.ptc  Reala.ptc  Sigmoidal_10.ptc  Sigmoidal_15.ptc  Sigmoidal_20.ptc  Sigmoidal_25.ptc  Sigmoidal_30.ptc  Sigmoidal_35.ptc  Sigmoidal_40.ptc  Sigmoidal_45.ptc  Velvia.ptc  (+11 more)
Sources/: .ptWhiteBalances.cpp.swp  CMakeLists.txt  SConscript  ptAbstractInteraction.cpp  ptAbstractInteraction.h  ptAdobeTable.h  ptAppDataModel.cpp  ptAppDataModel.h  ptBaseFoldBox.cpp  ptBaseFoldBox.h  ptCalloc.cpp  ptCalloc.h  ptChannelMixer.cpp  ptChannelMixer.h  ptCheck.cpp  ptCheck.h  ptChoice.cpp  ptChoice.h  ptCimg.cpp  ptCimg.h  ptClear.cpp  ptColorLabel.cpp  ptColorLabel.h  ptColorSelectButton.cpp  ptColorSelectButton.h  ptConfirmRequest.cpp  ptConfirmRequest.h  ptConstants.h  ptCreateAdobeProfiles.cpp  ptCreateSomeCurves.cpp  ptCurve.cpp  ptCurve.h  ptCurveWindow.cpp  ptCurveWindow.h  ptDcRaw.cpp  ptDcRaw.h  ptDefines.h  ptDrawLineInteraction.cpp  ptDrawLineInteraction.h  ptEcWin7.cpp  (+122 more)
Sources/ImageSpot/: ptImageSpot.cpp  ptImageSpot.h  ptImageSpotList.cpp  ptImageSpotList.h  ptRepairSpot.cpp
Sources/batch/: ptBatchWindow.cpp  ptBatchWindow.h  ptBatchWindow.ui  ptJobListItem.cpp  ptJobListItem.h  ptJobListModel.cpp  ptJobListModel.h
Sources/clapack/: LICENCE  clapack.h  dgemm.c  dgetrf.c  dgetrs.c  endfile.c  err.c  fmt.c  ilaenv.c  lsame.c  open.c  ptaswp.c  wref.c  wrtfmt.c  wsfe.c  xerbla.c
Sources/dcb/: dcb_demosaicing.c  dcb_demosaicing_old.c
Sources/fastbilateral/: array.h  array_n.h  chrono.h  fast_lbf.h  geom.h  math_tools.h  mixed_vector.h  msg_stream.h
Sources/filemgmt/: ptAbstractThumbnailLayouter.cpp  ptAbstractThumbnailLayouter.h  ptColumnGridThumbnailLayouter.cpp  ptColumnGridThumbnailLayouter.h  ptDirList.cpp  ptDirList.h  ptFSMProxy.cpp  ptFSMProxy.h  ptFileMgrConstants.h  ptFileMgrDM.cpp  ptFileMgrDM.h  ptFileMgrThumbnailer.cpp  ptFileMgrThumbnailer.h  ptFileMgrWindow.cpp  ptFileMgrWindow.h  ptFileMgrWindow.ui  ptGraphicsSceneEmitter.cpp  ptGraphicsSceneEmitter.h  ptGraphicsThumbGroup.cpp  ptGraphicsThumbGroup.h  ptGridThumbnailLayouter.cpp  ptGridThumbnailLayouter.h  ptImageView.cpp  ptImageView.h  ptPathBar.cpp  ptPathBar.h  ptRowGridThumbnailLayouter.cpp  ptRowGridThumbnailLayouter.h  ptSingleDirModel.cpp  ptSingleDirModel.h  ptTagList.cpp  ptTagList.h  ptTagModel.cpp  ptTagModel.h  ptThumbCache.cpp  ptThumbCache.h  ptThumbDM.cpp  ptThumbDM.h  ptThumbDefines.cpp  ptThumbDefines.h  (+12 more)
Sources/filters/: ptCfgItem.cpp  ptCfgItem.h  ptFilterBase.cpp  ptFilterBase.h  ptFilterConfig.cpp  ptFilterConfig.h  ptFilterDM.cpp  ptFilterDM.h  ptFilterFactory.cpp  ptFilterFactory.h  ptFilterUids.h  ptFilter_ABCurves.cpp  ptFilter_ABCurves.h  ptFilter_BlackWhite.cpp  ptFilter_BlackWhite.h  ptFilter_BlackWhite.ui  ptFilter_Brightness.cpp  ptFilter_Brightness.h  ptFilter_ChannelMixer.cpp  ptFilter_ChannelMixer.h  ptFilter_ChannelMixer.ui  ptFilter_ColorBoost.cpp  ptFilter_ColorBoost.h  ptFilter_ColorContrast.cpp  ptFilter_ColorContrast.h  ptFilter_ColorDenoise.cpp  ptFilter_ColorDenoise.h  ptFilter_ColorEnhancement.cpp  ptFilter_ColorEnhancement.h  ptFilter_ColorIntensity.cpp  ptFilter_ColorIntensity.h  ptFilter_ColorIntensity.ui  ptFilter_ColorTone.cpp  ptFilter_ColorTone.h  ptFilter_ColorTone.ui  ptFilter_CrossProcessing.cpp  ptFilter_CrossProcessing.h  ptFilter_Defringe.cpp  ptFilter_Defringe.h  ptFilter_Defringe.ui  (+101 more)
Sources/filters/imagespot/: ptFilter_SpotTuning.cpp  ptFilter_SpotTuning.h  ptFilter_SpotTuning.ui  ptImageSpot.cpp  ptImageSpot.h  ptImageSpotEditor.cpp  ptImageSpotEditor.h  ptImageSpotItemDelegate.cpp  ptImageSpotItemDelegate.h  ptImageSpotList.cpp  ptImageSpotList.h  ptImageSpotModel.cpp  ptImageSpotModel.h  ptRepairInteraction.cpp  ptRepairInteraction.h  ptRepairSpot.cpp  ptRepairSpot.h  ptSpotInteraction.cpp  ptSpotInteraction.h  ptSpotListWidget.cpp  ptSpotListWidget.h  ptSpotListWidget.ui  ptSpotListWidgetHelper.cpp  ptSpotListWidgetHelper.h  ptTuningSpot.cpp  ptTuningSpot.h
Sources/greyc/: CImg.h  CImg1440-alt.h  CImg1453.h
Sources/imagespot/: ptImageSpot.cpp  ptImageSpot.h  ptImageSpotEditor.cpp  ptImageSpotEditor.h  ptImageSpotItemDelegate.cpp  ptImageSpotItemDelegate.h  ptImageSpotList.cpp  ptImageSpotList.h  ptImageSpotListView.cpp  ptImageSpotListView.h  ptImageSpotModel.cpp  ptImageSpotModel.h  ptLocalSpot.cpp  ptLocalSpot.h  ptRepairInteraction.cpp  ptRepairInteraction.h  ptRepairInteractionUI.h  ptRepairSpot.cpp  ptRepairSpot.h  ptRepairSpotEditor.cpp  ptRepairSpotEditor.h  ptRepairSpotItemDelegate.cpp  ptRepairSpotItemDelegate.h  ptRepairSpotListView.cpp  ptRepairSpotListView.h  ptRepairSpotModel.cpp  ptRepairSpotModel.cpp.orig  ptRepairSpotModel.h  ptRepairSpotModel.h.orig  ptRepairSpotShape.cpp  ptRepairSpotShape.h  ptRepairSpotView.cpp  ptRepairSpotView.h  ptSpotInteraction.cpp  ptSpotInteraction.h
Sources/metadata/: ptMetadataUtil.h  ptXmp.cpp  ptXmp.h  ptXmpBase.cpp  ptXmpBase.h  ptXmpID.cpp  ptXmpID.h  ptXmpIDMap.cpp  ptXmpIDMap.h  ptXmpMM.cpp  ptXmpMM.h  ptXmpSettings.cpp  ptXmpSettings.h
Sources/perfectraw/: lmmse_interpolate.c
Sources/qtsingleapplication/: qtlocalpeer.cpp  qtlocalpeer.h  qtlockedfile.h  qtlockedfile_unix.cpp  qtlockedfile_win.cpp  qtsingleapplication.cpp  qtsingleapplication.h
Sources/rawtherapee/: amaze_interpolate - old.c  amaze_interpolate.c  ca_correct.c  cfa_line_dn.c  green_equil.c
Sources/vcd/: ahd_interpolate_mod.c  ahd_partial_interpolate.c  es_median_filter.c  median_filter_new.c  refinement.c  vcd_interpolate.c
(+747 files in other folders)
